--- a/package.json
+++ b/package.json
@@ -1,24 +1,47 @@
 {
-  "name": "pasteserver",
-  "version": "1.15.2",
-  "description": "PasteServer to upload text or code",
-  "repository": "https://github.com/juliarn/PasteServer",
-  "readme": "README.md",
-  "main": "index.js",
-  "scripts": {
-    "start": "node index.js"
+  "name": "haste",
+  "version": "0.1.0",
+  "private": true,
+  "description": "Private Pastebin Server",
+  "keywords": [
+    "paste",
+    "pastebin"
+  ],
+  "author": {
+    "name": "John Crepezzi",
+    "email": "john.crepezzi@gmail.com",
+    "url": "http://seejohncode.com/"
   },
-  "author": "juliarn",
-  "license": "MIT",
+  "main": "haste",
   "dependencies": {
-    "arangojs": "^6.10.0",
-    "body-parser": "latest",
-    "express": "^4.16.4",
-    "express-rate-limit": "^3.3.2",
-    "fs-extra": "latest",
-    "redis": "^3.0.2",
-    "request": "latest",
-    "serve-static": "^1.13.2",
-    "unzipper": "^0.10.10"
+    "busboy": "0.2.4",
+    "connect": "^3.7.0",
+    "connect-ratelimit": "0.0.7",
+    "connect-route": "0.1.5",
+    "pg": "^8.0.0",
+    "redis": "0.8.1",
+    "redis-url": "0.1.0",
+    "st": "^2.0.0",
+    "uglify-js": "3.1.6",
+    "winston": "^2.0.0"
+  },
+  "devDependencies": {
+    "mocha": "^8.1.3"
+  },
+  "bundledDependencies": [],
+  "bin": {
+    "haste-server": "./server.js"
+  },
+  "files": [
+    "server.js",
+    "lib",
+    "static"
+  ],
+  "directories": {
+    "lib": "./lib"
+  },
+  "scripts": {
+    "start": "node server.js",
+    "test": "mocha --recursive"
   }
 }
